src/css/style.scss
/* ... */
.title {
  display: block;
  margin-bottom: 0.5em;
  line-height: 1;
}
.text-block .title,
.text-block .subtitle {
  font-size: var(--font-mid);
  text-align: center;
  line-height: 1.05;
  // display: block;
}

.subtitle, .author {
  margin: 0 auto;
  display: block;
  line-height: 1;
  @media (max-width: 670px) {
    max-width: 85%;
  }
}

.text-block {
  padding: 6.6em 4em;

  .title {
    margin-bottom: 0.5em;
  }

  h2 {
    text-indent: 3em;
  }
  p, p + p, h2, h3 {
    max-width: 72%;
    @media(max-width: 960px) {
      max-width: 85%;
    }
    @media(max-width: 670px) {
      max-width: 100%;
    }
  }
  p + p {
    text-indent: 3em;
    margin: 0;
  }
  figure {
    display: table;
    max-width: 680px;
    margin: 6em auto;
    @media(max-width: 960px) {
      max-width: 100%;
      pointer-events: none;
    }
    &:hover img {
      filter: grayscale(0);
    }
    img {
      max-width: 100%;
      margin: 0 auto;
      display: block;
      filter: grayscale(1);
      // position: absolute;
      // top: 50%; left: 50%;
      // transform: translate(-50%, -50%);
    }
    figcaption {
      display: table-caption;
      caption-side: bottom;
      text-align: left;
      line-height: 1.2;
    }
  }
  @media (max-width: 670px) {
    max-width: 100%;
    margin: 0 auto;
    padding-top: 4em;
    padding-left: 1em;
    padding-right: 1em;
  }
}

.footnotes {
  margin: 2.2em 0;
  margin-left: 1em;
  margin-top: 4em;
  column-count: 1;
  max-width: 85%;
  display: none;
  overflow-wrap: break-word;
  word-wrap: break-word;
  @media(max-width: 670px) {
    display: block;
  }
  hr {
    display: none;
  }
  ol li {
    font-size: 1.1rem;
    break-inside: avoid;
    @media(max-width: 960px) {
      font-size: 0.6rem;
    }
  }
}

[data-template="about"] .text-block {
  padding-bottom: 8em;
}


dl {
  font-family: 'DinSynt';
  font-size: var(--font-body);
  line-height: 1.1;
  break-inside: avoid;
  dt {
    text-transform: uppercase;
  }
  dd + dt {
    margin-top: 1.1em;
  }
}


header a:hover,
.pane-close:hover {
  cursor: pointer;
  border-bottom: 1px solid;
}

.pane-inner p {
  max-width: 100%;
}

ul {
  list-style: none;
  margin-left: 4rem;
  margin-top: 1em;
  @media (max-width: 670px) {
    margin-left: 1em;
  }
  li {
    font-size: 1.8rem;
    line-height: 1.1;
    font-weight: 400;
    &:first-of-type {
      text-transform: uppercase;
    }
  }
}

figure.wipe {
  position: absolute;
  top: 0; left: 0;
  width: 100%; height: 100%;
  z-index: 3;
  background-size: 52vh;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  pointer-events: none;
  transform: translateZ(0);
}

hr {
  display: none;
}

.people {
  max-width: 80%;
  margin-top: 2em;
  margin-left: 4em;
  display: flex;
  flex-direction: row;
  dl:first-of-type {
    margin-right: 2em;
  }
}

@media (max-width: 640px) {
  figure.wipe {
    z-index: 5;
    background-attachment: initial;
  }
}

section {
  display: flex;
  flex-direction: column;
}
section.spacer {
  height: 100vh;
}
section.initial {
  position: -webkit-sticky;
  position: sticky;
  top: 0; height: 100vh;
  left: 0; width: 100vw;
  align-items: center;
  justify-content: center;
  &:hover {
    cursor: pointer;
  }
}
section.call {
  position: relative;
  top: 0;
  /* padding: 8rem 0; */
  justify-content: center;
  align-items: center;
  background: white;
  height: 100vh;
}

header {
  h1 {
    display: flex;
    align-items: flex-start;
    @media (max-width: 670px) {
      width: 80vw;
    }

    nav {
      height: 1.2em;
      overflow-y: hidden;
      flex: none;
      text-align: left;
      transition: height ease-in-out 0.5s;

      &.hover {
        height: auto;
      }
      &:hover {
        cursor: pointer;
      }
      .issue {
        display: table;
        padding-left: 0.25rem;
        border-bottom: 1px solid transparent;
        a {
          text-transform: none !important;
          border-bottom: 0 !important;
          .title {
            display: inline-block;
            margin-bottom: 0;
          }
        }
        &:hover {
          border-bottom: 1px solid !important;
        }
      }
    }
  }
}

[data-template="issue"], [data-display="home"] {
  .title-block {
    background: white;
    padding-top: 8em;
    // max-width: 100%;
    // margin: 0 auto;
    @media (max-width: 670px) {
      padding-top: 4em;
    }
    h1 {
      display: flex;
      flex-direction: column;
      justify-content: space-around;
      font-size: var(--font-body);
      position: static !important;
      top:inherit;
      left: 0;
      transform: none;
      @media (max-width: 670px) {
        font-size: 1.05rem;
      }
    }
    ul {
      margin-left: 0;
      li {
        line-height: 1.2;
      }
    }
  }
  .text-block {
    padding-bottom: 0;
    p {
      max-width: 70% !important;
      @media (max-width: 670px) {
        max-width: 100% !important;
      }
    }
    .title {
      font-size: var(--font-body);
    }
  }
  .issue-items {
    margin-bottom: 4em;
    ul {
      font-size: var(--font-body);
      @media (max-width: 670px) {
        font-size: 1.05rem;
      }

      li {
        font-size: inherit;
        @media (max-width: 670px) {
          line-height: 1.3;
        }
        a {
          text-transform: none;
        }
      }
    }
  }
  h1 {
    font-weight: 300;
  }
  .title {
    // text-transform: none !important;
  }
}

figure {
  position: relative;
  &:hover {
    cursor: pointer;
  }

  &.expand {
    background: black;
    position: fixed;
    display: flex;
    align-items: center;
    top: 0; left: 0; right: 0; bottom: 0;
    width: 100vw;
    height: 100vh;
    max-width: 100%;
    margin: 0;
    z-index: 210;
    img {
      padding: 4em 0;
      margin: 0 auto;
      filter: grayscale(0);
    }
    .figure-close {
      display: block;
    }
  }
}

.figure-num {
  display: block;
  text-align: center;
  padding-bottom: 1em;
}
/* ... */

